--- a/newsir2/index.html
+++ b/newsir2/index.html
@@ -9,9 +9,9 @@
         <fieldset id="size">
             <legend>login page</legend>
             Email: 
-            <input type="text">
+            <input type="text" required="required">
             Password: 
-            <input type="password">
+            <input type="password" required="required">
             <button>Submit</button>
         </fieldset>
     </form>
