--- a/newsir2/index.html
+++ b/newsir2/index.html
@@ -5,13 +5,13 @@
     <title>Sign in page</title>
 </head>
 <body>
-    <form>
+    <form action="file:///F:/new%20sir%203/index.html" method="get">
         <fieldset id="size">
             <legend>login page</legend>
             Email: 
             <input type="text" required="required">
             Password: 
-            <input type="password" required="required">
+            <input type="password" required>
             <button>Submit</button>
         </fieldset>
     </form>
