--- a/paragraph practice/index.html
+++ b/paragraph practice/index.html
@@ -6,17 +6,17 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h1 id="h1">Black Goose Bistro-Summer Menu</h1> 
+    <h1>Black Goose Bistro-Summer Menu</h1> 
     <p>My name is Usama My name is Usama My name is Usama</p>
     <p>My name is UsamaMy name is UsamaMy name is UsamaMy name is UsamaMy name is UsamaMy name is Usama</p>
-<h2 class="h2">Appetizer</h2>
+<h2>Appetizer</h2>
 <p>My name is UsamaMy name is UsamaMy name is UsamaMy name is UsamaMy name is Usama</p>
 <div class="blue">My name</div>
 <p>My name is UsamaMy name is UsamaMy name is UsamaMy name is UsamaMy name is Usama</p>
 <div class="blue">My name</div>
 <p> class="blue" class="blue" class="blue" class="blue" class="blue" <b><span class="darkblack" >$7.38</span></b>  
  </p>
-<h2 class="h2"> Mass coursers</h2>
+<h2> Mass coursers</h2>
 <p>My name is UsamaMy name is UsamaMy name is UsamaMy name is Usama</p>
 <div class="blue" >My name is UsamaMy name is UsamaMy name is <span id="darkblue">Usama</span> </div>
 <p>My name is UsamaMy name is UsamaMy name is UsamaMy name is UsamaMy name is UsamaMy name is Usama</p>
